# crossuo

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.old  README.md  appveyor.yml  travis.sh
common/: CMakeLists.txt  checksum.h  fs.h  log.h  str.h  utils.h
common/logging/: loggers.h  logging.cpp  logging.h
src/: Application.cpp  Application.h  Backend.h  BaseQueue.cpp  BaseQueue.h  CMakeLists.txt  CharacterList.cpp  CharacterList.h  CityList.cpp  CityList.h  ClickObject.cpp  ClickObject.h  CommonInterfaces.cpp  Config.cpp  Config.h  Constants.h  Container.cpp  Container.h  ContainerStack.cpp  ContainerStack.h  CrossApp.cpp  CrossPCH.cpp  CrossPCH.h  CrossUO.cpp  CrossUO.h  CrossUO.rc  DateTimeStamp.cpp  DateTimeStamp.h  DefinitionMacro.h  Definitions.h  ExceptionFilter.cpp  ExceptionFilter.h  FileSystem.cpp  FileSystem.h  GameStackWalker.h  GameWindow.cpp  GameWindow.h  GitRevision.h.in  Globals.cpp  Globals.h  (+74 more)
src/Crypt/: CryptEntry.cpp  CryptEntry.h  GameCrypt.cpp  GameCrypt.h  LoginCrypt.cpp  LoginCrypt.h  md5.cpp  md5.h  platform.h  table.h  twofish.cpp
src/GLEngine/: GLEngine.cpp  GLEngine.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLHeaders.h  GLShader.cpp  GLShader.h  GLTextTexture.h  GLTexture.cpp  GLTexture.h  GLTextureCircleOfTransparency.cpp  GLTextureCircleOfTransparency.h  GLVector.cpp  glew.c
src/GUI/: BaseGUI.cpp  BaseGUI.h  GUI.h  GUIAlphaBlending.cpp  GUIAlphaBlending.h  GUIBlending.cpp  GUIBlending.h  GUIBuff.cpp  GUIBuff.h  GUIBulletinBoardObject.cpp  GUIBulletinBoardObject.h  GUIButton.cpp  GUIButton.h  GUIButtonTileart.cpp  GUIButtonTileart.h  GUICheckbox.cpp  GUICheckbox.h  GUIChecktrans.cpp  GUIChecktrans.h  GUIColoredPolygone.cpp  GUIColoredPolygone.h  GUIComboBox.cpp  GUIComboBox.h  GUIComboboxText.cpp  GUIComboboxText.h  GUIDataBox.cpp  GUIDataBox.h  GUIDrawObject.cpp  GUIDrawObject.h  GUIExternalTexture.cpp  GUIExternalTexture.h  GUIGenericText.cpp  GUIGenericText.h  GUIGenericTextEntry.cpp  GUIGenericTextEntry.h  GUIGlobalColor.cpp  GUIGlobalColor.h  GUIGroup.cpp  GUIGroup.h  GUIGumppic.cpp  (+64 more)
src/GameObjects/: CustomHouseMultiObject.cpp  CustomHouseMultiObject.h  CustomHouseObjects.cpp  CustomHouseObjects.h  GameCharacter.cpp  GameCharacter.h  GameEffect.cpp  GameEffect.h  GameEffectDrag.cpp  GameEffectDrag.h  GameEffectMoving.cpp  GameEffectMoving.h  GameItem.cpp  GameItem.h  GameObject.cpp  GameObject.h  GamePlayer.cpp  GamePlayer.h  GameWorld.cpp  GameWorld.h  LandObject.cpp  LandObject.h  MapBlock.cpp  MapBlock.h  MapObject.cpp  MapObject.h  MultiObject.cpp  MultiObject.h  ObjectOnCursor.cpp  ObjectOnCursor.h  RenderStaticObject.cpp  RenderStaticObject.h  StaticObject.cpp  StaticObject.h
src/Gumps/: Gump.cpp  Gump.h  GumpAbility.cpp  GumpAbility.h  GumpBaseScroll.cpp  GumpBaseScroll.h  GumpBook.cpp  GumpBook.h  GumpBuff.cpp  GumpBuff.h  GumpBulletinBoard.cpp  GumpBulletinBoard.h  GumpBulletinBoardItem.cpp  GumpBulletinBoardItem.h  GumpCombatBook.cpp  GumpCombatBook.h  GumpConsoleType.cpp  GumpConsoleType.h  GumpContainer.cpp  GumpContainer.h  GumpCustomHouse.cpp  GumpCustomHouse.h  GumpDrag.cpp  GumpDrag.h  GumpDye.cpp  GumpDye.h  GumpGeneric.cpp  GumpGeneric.h  GumpGrayMenu.cpp  GumpGrayMenu.h  GumpJournal.cpp  GumpJournal.h  GumpMap.cpp  GumpMap.h  GumpMenu.cpp  GumpMenu.h  GumpMenubar.cpp  GumpMenubar.h  GumpMinimap.cpp  GumpMinimap.h  (+68 more)
src/Managers/: AnimationManager.cpp  AnimationManager.h  CityManager.cpp  CityManager.h  ClilocManager.cpp  ClilocManager.h  ColorManager.cpp  ColorManager.h  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  CorpseManager.cpp  CorpseManager.h  CreateCharacterManager.cpp  CreateCharacterManager.h  CustomHousesManager.cpp  CustomHousesManager.h  EffectManager.cpp  EffectManager.h  FileManager.cpp  FileManager.h  FontsManager.cpp  FontsManager.h  GumpManager.cpp  GumpManager.h  IntlocManager.cpp  IntlocManager.h  MacroManager.cpp  MacroManager.h  MapManager.cpp  MapManager.h  MouseManager.cpp  MouseManager.h  ObjectPropertiesManager.cpp  ObjectPropertiesManager.h  OptionsMacroManager.cpp  OptionsMacroManager.h  PacketManager.cpp  PacketManager.h  (+16 more)
src/Network/: Connection.cpp  Connection.h  Packets.cpp  Packets.h  PluginPackets.cpp  PluginPackets.h  UOHuffman.cpp  UOHuffman.h
src/Renderer/: RenderAPI.h  RenderAdd.cpp  RenderCommands.h  RenderDebug.cpp  RenderDraw.cpp  RenderInternal.cpp  RenderInternal.h  RenderState.cpp  RenderTypes.h
src/ScreenStages/: BaseScreen.cpp  BaseScreen.h  CharacterListScreen.cpp  CharacterListScreen.h  ConnectionScreen.cpp  ConnectionScreen.h  CreateCharacterScreen.cpp  CreateCharacterScreen.h  GameBlockedScreen.cpp  GameBlockedScreen.h  GameScreen.cpp  GameScreen.h  MainScreen.cpp  MainScreen.h  SelectProfessionScreen.cpp  SelectProfessionScreen.h  SelectTownScreen.cpp  SelectTownScreen.h  ServerScreen.cpp  ServerScreen.h
src/TextEngine/: EntryText.cpp  EntryText.h  GameConsole.cpp  GameConsole.h  Journal.cpp  Journal.h  RenderTextObject.cpp  RenderTextObject.h  TextContainer.cpp  TextContainer.h  TextData.cpp  TextData.h  TextRenderer.cpp  TextRenderer.h
src/Utility/: PerfMarker.cpp  PerfMarker.h  PingThread.cpp  PingThread.h
src/Walker/: FastWalk.cpp  FastWalk.h  PathFinder.cpp  PathFinder.h  PathNode.cpp  PathNode.h  WalkData.cpp  WalkData.h  Walker.cpp  Walker.h
src/Wisp/: WispApplication.cpp  WispApplication.h  WispBinaryFileWriter.cpp  WispBinaryFileWriter.h  WispConnection.cpp  WispConnection.h  WispDataStream.h  WispMappedFile.cpp  WispMappedFile.h  WispMouse.cpp  WispMouse.h  WispPacketMessage.cpp  WispPacketMessage.h  WispPacketReader.cpp  WispPacketReader.h  WispTextFileParser.cpp  WispTextFileParser.h  WispThread.cpp  (+3 more)
xuocore/: CMakeLists.txt  client_db.h  client_info.cpp  client_info.h  common.cpp  common.h  commoninterfaces.h  enumlist.h  file.cpp  file.h  http.cpp  http.h  mappedfile.cpp  mappedfile.h  mft.cpp  mft.h  mulstruct.h  plugininterface.h  text_parser.cpp  text_parser.h  uo_installer.cpp  uo_installer.h  uodata.cpp  uodata.h  uolib.h  uop.cpp  uop.h  xuoi.cpp  xuoi.h
(+635 files in other folders)
